Include parameter support
Signed-off-by: azerr <azerr@redhat.com>